--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -22,7 +22,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:ignore="Overdraw">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -33,65 +33,77 @@
             layout="@layout/content_settings_general"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:layout_marginTop="@dimen/keyline_4" />
 
         <com.duckduckgo.mobile.android.ui.view.SectionDivider
-            android:id="@+id/settingsSectionGeneralBottomDivider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/contentSettingsGeneral" />
+            android:paddingBottom="0dp" />
+
+        <include
+            android:id="@+id/contentSettingsAutofill"
+            layout="@layout/content_settings_autofill"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="26dp" />
+
+        <include
+            android:id="@+id/contentSettingsAppearance"
+            layout="@layout/content_settings_appearance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <com.duckduckgo.mobile.android.ui.view.SectionDivider
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="0dp" />
 
         <include
             android:id="@+id/contentSettingsPrivacy"
             layout="@layout/content_settings_privacy"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/settingsSectionGeneralBottomDivider" />
+            android:layout_height="wrap_content" />
 
         <com.duckduckgo.mobile.android.ui.view.SectionDivider
-            android:id="@+id/settingsSectionPrivacyBottomDivider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/contentSettingsPrivacy"/>
+            android:paddingBottom="0dp" />
+
+        <include
+            android:id="@+id/contentSettingsCustomize"
+            layout="@layout/content_settings_customize"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <com.duckduckgo.mobile.android.ui.view.SectionDivider
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="0dp" />
 
         <include
             android:id="@+id/contentSettingsMore"
-            layout="@layout/content_settings_more"
+            layout="@layout/content_settings_other"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/settingsSectionPrivacyBottomDivider" />
+            android:layout_height="wrap_content" />
 
         <com.duckduckgo.mobile.android.ui.view.SectionDivider
             android:id="@+id/settingsSectionMoreBottomDivider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/contentSettingsMore"/>
+            android:paddingBottom="0dp" />
 
         <include
             android:id="@+id/contentSettingsOther"
-            layout="@layout/content_settings_other"
+            layout="@layout/content_settings_about"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/settingsSectionMoreBottomDivider" />
+            android:layout_height="wrap_content" />
 
         <include
             android:id="@+id/contentSettingsInternal"
             layout="@layout/content_settings_internal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/contentSettingsOther" />
+            android:layout_height="wrap_content" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+    </LinearLayout>
 
 </ScrollView>
