--- a/app/src/main/res/layout/content_settings_autofill.xml
+++ b/app/src/main/res/layout/content_settings_autofill.xml
@@ -15,20 +15,20 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/settingsSectionGeneral"
+    android:id="@+id/settingsSectionAutofill"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/setAsDefaultBrowserSetting"
-        style="@style/SettingsSwitch"
-        android:text="@string/settingsDefaultBrowserEnabled"
-        android:theme="@style/SettingsSwitchTheme" />
-
     <TextView
-        android:id="@+id/homeScreenWidgetSetting"
+        android:id="@+id/autofill"
         style="@style/SettingsItemClickable"
-        android:text="@string/settingsAddHomeScreenWidget" />
+        android:gravity="center_vertical"
+        android:text="@string/autofillSettingsDisplayName" />
+
+    <com.duckduckgo.mobile.android.ui.view.SectionDivider
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 
 </LinearLayout>
