--- a/autofill/autofill-impl/src/main/res/values/autofill-impl-strings-untranslated.xml
+++ b/autofill/autofill-impl/src/main/res/values/autofill-impl-strings-untranslated.xml
@@ -14,48 +14,7 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <string name="managementScreenTitle">Autofill Logins</string>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
 
-    <string name="managementLockedModeText">Unlock Autofill</string>
-
-    <string name="managementDisabledModeCta"><b>Set up in Settings</b></string>
-    <string name="managementDisabledModeSubtitle">A device lock pattern, PIN, or biometrics is required to protect your Autofill Login details.</string>
-    <string name="managementDisabledModeTitle">Secure your device to use Autofill</string>
-
-    <string name="saveLoginDialogTitle">Save Login?</string>
-    <string name="saveLoginMissingUsernameDialogTitle">Save Password?</string>
-    <string name="saveLoginDialogButtonSave">Save Login</string>
-    <string name="saveLoginMissingUsernameDialogButtonSave">Save Password</string>
-    <string name="saveLoginDialogNotNow">Not Now</string>
-    <string name="saveLoginDialogOnboardingExplanationSubtitle">Logins are stored securely on this device only, and can be managed from the Autofill menu in Settings.</string>
-    <string name="saveLoginDialogFirstTimeOnboardingExplanationTitle">Do you want DuckDuckGo to save your Login?</string>
-    <string name="saveLoginDialogMoreOptionsButtonLabel">More Options</string>
-
-    <string name="useSavedLoginDialogTitle">Use Saved Login?</string>
-    <string name="useSavedLoginDialogMissingUsernameButtonText">Login for %s</string>
-    <string name="useSavedLoginDialogMissingUsernameMissingDomainButtonText">Login for site</string>
-
-    <string name="updateLoginDialogTitle">Update Password?</string>
-    <string name="updateLoginDialogButtonUpdatePassword">Update Password</string>
-    <string name="updateLoginDialogButtonNotNow">Now Now</string>
-
-    <string name="autofillDialogCloseButtonContentDescription">Close Autofill Dialog</string>
-
-    <string name="credentialManagementEditLoginTitleHint">Login Title</string>
-    <string name="credentialManagementEditUsernameHint">Username</string>
-    <string name="credentialManagementEditPasswordHint">Password</string>
-    <string name="credentialManagementEditTitle">Edit Login</string>
-    <string name="credentialManagementEditWebsiteHint">Website URL</string>
-    <string name="credentialManagementEditNotesHint">Notes</string>
-    <string name="credentialManagementEditButtonDelete">Delete</string>
-    <string name="credentialManagementEditButtonSaveChanges">Save Changes</string>
-    <string name="credentialManagementEditButtonCopyUsername">Copy Username</string>
-    <string name="credentialManagementEditButtonCopyPassword">Copy Password</string>
-    <string name="credentialManagementEditLastUpdated">Login last updated %s</string>
-
-    <string name="credentialManagementAutofillToggleLabel">Save and Autofill Logins</string>
-    <string name="credentialManagementViewMenuEdit">Edit</string>
-    <string name="credentialManagementViewMenuDelete">Delete</string>
 
 </resources>
