--- a/autoconsent/autoconsent-impl/src/main/res/values/strings-autoconsent.xml
+++ b/autoconsent/autoconsent-impl/src/main/res/values/strings-autoconsent.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2022 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,7 +14,8 @@
   ~ limitations under the License.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.duckduckgo.autoconsent.api">
-
-</manifest>
+<resources>
+    <string name="autoconsentTitle">Manage Cookie Pop-ups</string>
+    <string name="autoconsentDescription">When DuckDuckGo detects cookie consent pop-ups on sites you visit, we can automatically set your cookie preferences to minimize cookies and maximize privacy, then close the pop-ups.</string>
+    <string name="autoconsentToggle">Let DuckDuckGo manage cookie consent pop-ups</string>
+</resources>
